add button save

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -580,7 +580,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <div class="toggler-close"> </div>
                         <div class="theme-options">
                             <div class="theme-option theme-colors clearfix">
-                                <span> THEME COLOR </span>
+                                <span> THEME COLOR BLACK & WHITE </span>
                                 <ul>
                                     <li class="color-default current tooltips" data-style="default" data-container="body" data-original-title="Default"> </li>
                                     <li class="color-darkblue tooltips" data-style="darkblue" data-container="body" data-original-title="Dark Blue"> </li>
