change name again

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -594,7 +594,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <span> Theme Style </span>
                                 <select class="layout-style-option form-control input-sm">
                                     <option value="square" selected="selected">Square corners</option>
-                                    <option value="rounded">Rounded corners</option>
+                                    <option value="rounded">Tindakan orang tergantung tempat dia tinggal.</option>
                                 </select>
                             </div>
                             <div class="theme-option">
