--- a/Dashboard.html
+++ b/Dashboard.html
@@ -601,7 +601,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <span> Layout </span>
                                 <select class="layout-option form-control input-sm">
                                     <option value="fluid" selected="selected">Fluid</option>
-                                    <option value="boxed">Boxed</option>
+                                    <option value="boxed">Boxer</option>
                                 </select>
                             </div>
                             <div class="theme-option">
